Refactored, added feature Refactored the VERY ugly code, removed the useless `FILES` static var and made things easier to read. Added the feature to set to either elf64 (default) or bin (set with "lsp: none" somewhere in the file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#jsonrpc-core = "13.2.0"
-#tower-lsp="0.4.0"
-#tokio="0.1.22"
-#futures="*"
-serde_json="1.0.41"
-lazy_static="1.4.0"
-crossbeam-channel="0.3.5"
-gen_lsp_server="0.2.0"
-failure="0.1.4"
-lsp-types="0.57.0"
-tempfile="3.1.0"
+serde_json="1.0.48"
+crossbeam-channel="0.3.9"
+gen_lsp_server="*"
+failure="0.1.7"
+lsp-types="0.57.2"
+tempfile="*"
